Add Login and Sign Up UI and its logic.
The UI is ready and the logic deals with cases where the user leaves fields blank, if the password is less than 6 characters and if passwords dont match. It also deals with the situation where the user enters an email that is not in email format.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    tools:context=".presentation.MainActivity"
+    tools:visibility="visible">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:background="@color/colorPrimaryDark"
+        android:gravity="top"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/imageButton_mainActivty_accountButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:onClick="accountBtnClick"
+            android:background="@android:color/transparent"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:src="@drawable/baseline_account_box_white_18"
+
+            tools:ignore="ContentDescription" />
+
+
+        <TextView
+            android:id="@+id/textView_mainactivity_appnameText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="15dp"
+            android:fontFamily="@font/orbitron"
+            android:text="@string/app_name"
+            android:textColor="@android:color/background_light"
+            android:textSize="30sp" />
+
+    </LinearLayout>
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabview_mainActivity"
+        android:layout_width="match_parent"
+        android:layout_height="58dp"
+        android:background="@color/whiteBtn"
+        android:contextClickable="true"
+        app:tabIconTint="@color/colorPrimary"
+        app:tabIndicatorColor="@color/black_overlay"
+        app:tabIndicatorHeight="6dp"
+        app:tabMode="scrollable"
+        app:tabRippleColor="@color/colorAccent"
+        app:tabSelectedTextColor="@color/black_overlay"
+        app:tabTextAppearance="@style/TextAppearance.AppCompat.Large"
+        app:tabTextColor="@android:color/background_dark">
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabItem_mainActivity_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contextClickable="true"
+
+            android:text="@string/tabTextAll" />
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabItem_mainActivity_books"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contextClickable="true"
+
+            android:text="@string/tabTextBooks" />
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabItem_mainActivity_events"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contextClickable="true"
+
+            android:text="@string/tabTextEvents" />
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabItem_mainActivity_servicesJobs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contextClickable="true"
+
+            android:text="@string/tabTextServiceJobs" />
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabItem_mainActivity_electronics"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:contextClickable="true"
+            android:text="@string/tabTextElectronics" />
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabItem_mainActivity_hobbiesGames"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contextClickable="true"
+
+            android:text="@string/tabTextHobbiesGames" />
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabItem_mainActivity_living"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:contextClickable="true"
+            android:text="@string/tabTextLiving" />
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabItem_mainActivity_transportation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contextClickable="true"
+            android:text="@string/tabTextTransportation" />
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabItem_mainActivity_arrangement"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contextClickable="true"
+            android:text="@string/tabTextArrangement" />
+
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabItem_mainActivity_other"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contextClickable="true"
+            android:text="@string/tabTextOther" />
+
+
+    </android.support.design.widget.TabLayout>
+
+
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="58dp"
+        android:background="@color/whiteBtn">
+
+
+        <Button
+            android:id="@+id/postAdBtn"
+            android:layout_width="289dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="150dp"
+            android:layout_marginEnd="90dp"
+            android:background="@android:drawable/editbox_background"
+            android:backgroundTint="@color/black_overlay"
+            android:fontFamily="@font/candal"
+            android:onClick="postAdBtnClick"
+            android:text="@string/postAnAd"
+            android:textColor="@color/whiteBtn" />
+
+
+        <ImageButton
+            android:id="@+id/sortBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/baseline_sort_white_18"
+            android:onClick="sortBtnClick"
+            tools:ignore="contentDescription" />
+
+
+    </LinearLayout>
+
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager_mainActivity"
+        android:layout_width="match_parent"
+        android:layout_height="776dp"
+        android:layout_gravity="end"
+        android:outlineAmbientShadowColor="@color/colorPrimary"
+        android:outlineSpotShadowColor="@color/colorPrimary"
+
+        />
+
+
+
+</LinearLayout>
