--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:fontFamily="@font/orbitron"
+        android:fontFamily="@font/orbitron_medium"
         android:text="@string/login"
         android:textAlignment="center"
         android:textColor="@android:color/background_light"
