--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="15dp"
-            android:fontFamily="@font/orbitron"
+            android:fontFamily="@font/orbitron_medium"
             android:text="@string/app_name"
             android:textColor="@android:color/background_light"
             android:textSize="30sp" />
