--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:fontFamily="@font/orbitron"
+        android:fontFamily="@font/orbitron_medium"
         android:text="@string/app_name"
         android:textColor="@android:color/background_light"
         android:textSize="75sp"
