Change UI to Dark!

--- a/app/src/main/res/layout/activity_edit_ad.xml
+++ b/app/src/main/res/layout/activity_edit_ad.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D7D7DB">
+    android:background="@color/adPostGreyBackground">
 
     <EditText
         android:id="@+id/editText_editAd_title"
@@ -15,10 +15,11 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:autofillHints=""
-        android:background="@color/whiteBtn"
+        android:background="@android:drawable/editbox_background"
         android:ems="10"
         android:hint="@string/title"
         android:inputType="text"
+        android:textColorHint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -30,24 +31,25 @@
     <EditText
         android:id="@+id/editText_editAd_description"
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="362dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:autofillHints=""
-        android:background="@color/whiteBtn"
+        android:background="@android:drawable/editbox_background"
         android:ems="10"
         android:gravity="start|top"
         android:hint="@string/description"
         android:inputType="textLongMessage|textMultiLine"
+        android:textColorHint="@color/colorPrimary"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_editAd_title"
-        app:layout_constraintVertical_bias="0.082"
+        app:layout_constraintVertical_bias="0.067"
         tools:targetApi="o" />
 
     <EditText
@@ -59,16 +61,17 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:autofillHints=""
-        android:background="@color/whiteBtn"
+        android:background="@android:drawable/editbox_background"
         android:ems="10"
         android:hint="@string/price"
         android:inputType="numberDecimal"
+        android:textColorHint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_editAd_description"
-        app:layout_constraintVertical_bias="0.095"
+        app:layout_constraintVertical_bias="0.142"
         tools:targetApi="o" />
 
     <Button
@@ -80,11 +83,11 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/editbox_background"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:onClick="saveBtnClick"
         android:text="@string/save"
         android:textAllCaps="false"
-        android:textColor="@color/whiteBtn"
+        android:textColor="@android:color/background_light"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -98,12 +101,12 @@
         android:id="@+id/textView_editAd_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorPrimaryDark"
         android:fontFamily="@font/orbitron"
         android:text="@string/edit"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="@color/whiteBtn"
+        android:textColor="@android:color/background_light"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,11 +122,12 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/whiteBtn"
+        android:background="@android:drawable/editbox_background"
         android:hint="@string/category"
         android:onClick="selectCategoryBtnClick"
         android:textAlignment="viewStart"
         android:textColor="@android:color/black"
+        android:textColorHint="@color/colorPrimary"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/editText_editAd_title"
         app:layout_constraintEnd_toEndOf="parent"
