--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.LoginActivity.ForgetPassword"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimaryDark"
+    tools:context=".presentation.LoginActivity.ForgetPassword">
 
 
     <TextView
@@ -25,7 +25,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.115" />
+        app:layout_constraintVertical_bias="0.11" />
 
     <EditText
         android:id="@+id/editText_forgetPassword_userName"
@@ -34,23 +34,25 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="540dp"
+        android:layout_marginBottom="476dp"
         android:background="@android:drawable/editbox_background"
-        android:backgroundTint="@color/colorPrimaryDark"
+        android:backgroundTint="@color/colorPrimary"
         android:cursorVisible="true"
         android:ems="10"
         android:hint="@string/userName"
         android:inputType="text"
         android:textColor="@android:color/background_light"
         android:textColorHighlight="@color/colorAccent"
+        android:textColorHint="@color/whiteBtn"
         android:textColorLink="@color/colorAccent"
         android:textCursorDrawable="@drawable/cursor_colour"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_forgetPassword_resetPasswordText"
-        app:layout_constraintVertical_bias="0.26"
+        app:layout_constraintVertical_bias="0.74"
         tools:targetApi="o" />
 
 
@@ -63,20 +65,22 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/editbox_background"
-        android:backgroundTint="@color/colorPrimaryDark"
+        android:backgroundTint="@color/colorPrimary"
         android:cursorVisible="true"
         android:ems="10"
         android:hint="@string/securityAnswer"
         android:inputType="text"
         android:textColor="@android:color/background_light"
         android:textColorHighlight="@color/colorAccent"
+        android:textColorHint="@color/whiteBtn"
         android:textColorLink="@color/colorAccent"
         android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_forgetPassword_securityQuestion"
-        app:layout_constraintVertical_bias="0.092"
+        app:layout_constraintVertical_bias="0.057"
         tools:targetApi="o" />
 
     <Button
@@ -84,18 +88,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="404dp"
+        android:layout_marginBottom="408dp"
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@android:color/background_light"
         android:onClick="getSecurityQuestionBtnClick"
         android:text="@string/getSecurityQuestion"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_forgetPassword_userName"
-        app:layout_constraintVertical_bias="0.154" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button_forgetPassword_resetPasswordBtn"
@@ -104,7 +105,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginBottom="156dp"
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@android:color/background_light"
         android:onClick="resetBtnClick"
@@ -113,7 +114,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_forgetPassword_securityAnswer"
-        app:layout_constraintVertical_bias="0.488" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView_forgetPassword_securityQuestion"
@@ -128,9 +129,9 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_forgetPassword_userName"
-        app:layout_constraintVertical_bias="0.338" />
+        app:layout_constraintVertical_bias="0.302" />
 
 </android.support.constraint.ConstraintLayout>
