--- a/app/src/main/res/layout/activity_user_profile_menu.xml
+++ b/app/src/main/res/layout/activity_user_profile_menu.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="15dp"
-            android:fontFamily="@font/orbitron_medium"
+            android:fontFamily="@font/orbitron"
             android:text="@string/menu"
             android:textColor="@android:color/background_light"
             android:textSize="30sp" />
