--- a/app/src/main/res/layout/activity_post_ad.xml
+++ b/app/src/main/res/layout/activity_post_ad.xml
@@ -108,7 +108,7 @@
         android:text="@string/post"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="@color/whiteBtn"
+        android:textColor="@android:color/background_light"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
