--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -145,7 +145,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="58dp"
-        android:background="@android:color/background_light">
+        android:background="@color/colorPrimaryDark">
 
 
         <Button
