Finish up on the user profile
User can now change his contact information.

--- a/app/src/main/res/layout/activity_profile_information.xml
+++ b/app/src/main/res/layout/activity_profile_information.xml
@@ -41,7 +41,7 @@
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@android:color/background_light"
         android:ems="10"
-        android:hint="@string/password"
+        android:hint="@string/changePasswoed"
         android:inputType="textPassword"
         android:textColor="@color/colorPrimaryDark"
         android:textColorHint="@color/colorPrimary"
@@ -189,6 +189,7 @@
         android:textColor="@android:color/background_light"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:onClick="profileInformationSaveClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.75"
