--- a/app/src/main/res/layout/fragment_tab_fragment_all.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment_all.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".presentation.HomePageTabs.TabFragmentAll">
+    tools:context=".presentation.homepagetabs.TabFragmentAll">
 
    <android.support.v7.widget.RecyclerView
        android:id="@+id/listView_insideFragmentAll"
