Fix a big code smell through Dependancy Injection.
Categories had individual classes as they had individual tab fragments. This was because every class was importing a specific List. I decided to use dependancy injection to pass the List needed to display in the fragment

--- a/app/src/main/res/layout/fragment_tab_fragment.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".presentation.HomePageTabs.TabFragmentAll">
+    tools:context=".presentation.HomePageTabs.TabFragment">
 
    <android.support.v7.widget.RecyclerView
-       android:id="@+id/listView_insideFragmentAll"
+       android:id="@+id/listView_insideFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
 
