--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -128,37 +128,10 @@
         android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationPass"
-        app:layout_constraintVertical_bias="0.062"
-        tools:targetApi="o" />
-
-    <EditText
-        android:id="@+id/editText_name_registrationSecurityQuestion"
-        android:layout_width="254dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:autofillHints=""
-        android:background="@android:drawable/editbox_background"
-        android:backgroundTint="@color/colorPrimaryDark"
-        android:cursorVisible="true"
-        android:ems="10"
-        android:hint="@string/securityQuestion"
-        android:inputType="text"
-        android:textColor="@android:color/background_light"
-        android:textColorHighlight="@color/colorAccent"
-        android:textColorLink="@color/colorAccent"
-        android:textCursorDrawable="@drawable/cursor_colour"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationConfirmPass"
-        app:layout_constraintVertical_bias="0.072"
+        app:layout_constraintVertical_bias="0.068"
         tools:targetApi="o" />
 
     <EditText
@@ -168,7 +141,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:autofillHints=""
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/colorPrimaryDark"
@@ -180,11 +152,10 @@
         android:textColorHighlight="@color/colorAccent"
         android:textColorLink="@color/colorAccent"
         android:textCursorDrawable="@drawable/cursor_colour"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationSecurityQuestion"
-        app:layout_constraintVertical_bias="0.11"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_signUp_securityQuestions"
         tools:targetApi="o" />
 
     <Button
@@ -222,5 +193,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_signUp_registerbutton"
         app:layout_constraintVertical_bias="0.251" />
+
+    <Spinner
+        android:id="@+id/spinner_signUp_securityQuestions"
+        android:layout_width="329dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:entries="@array/security_questions"
+        android:spinnerMode="dropdown"
+        android:text="Security Questions"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationConfirmPass" />
 
 </android.support.constraint.ConstraintLayout>
