--- a/app/src/main/res/layout/activity_view_ad_other_user.xml
+++ b/app/src/main/res/layout/activity_view_ad_other_user.xml
@@ -21,10 +21,10 @@
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.562"
+        app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.012" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView_viewAdOU_price"
@@ -53,30 +53,28 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="8dp"
         android:background="@android:drawable/editbox_background"
         android:hint="@string/description"
         android:textColorHint="@color/colorPrimary"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.56"
+        app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_viewAdOU_price"
-        app:layout_constraintVertical_bias="0.425" />
+        app:layout_constraintVertical_bias="0.16" />
 
 
     <Button
-        android:id="@+id/button_viewAdCU_delete"
+        android:id="@+id/button_viewAdCU_reportAd"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/black_overlay"
-        android:onClick="reportBtnClick"
+        android:onClick="reportAdBtnClick"
         android:text="@string/report_ad"
         android:textAllCaps="false"
         android:textColor="@color/whiteBtn"
@@ -84,9 +82,26 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.425"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout_viewAdOU_bot"
-        app:layout_constraintVertical_bias="0.385" />
+        app:layout_constraintHorizontal_bias="0.174"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button_viewAdCU_reportUser"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="@color/black_overlay"
+        android:onClick="reportUserBtnClick"
+        android:text="@string/report_user"
+        android:textAllCaps="false"
+        android:textColor="@color/whiteBtn"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.279"
+        app:layout_constraintStart_toEndOf="@+id/button_viewAdCU_reportAd" />
 
 </android.support.constraint.ConstraintLayout>
