Added presentation classes to manifest file

--- a/app/src/main/res/layout/activity_view_ad_other_user.xml
+++ b/app/src/main/res/layout/activity_view_ad_other_user.xml
@@ -77,7 +77,7 @@
         android:onClick="reportAdBtnClick"
         android:text="@string/report_ad"
         android:textAllCaps="false"
-        android:textColor="@color/whiteBtn"
+        android:textColor="@android:color/background_light"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -96,7 +96,7 @@
         android:onClick="reportUserBtnClick"
         android:text="@string/report_user"
         android:textAllCaps="false"
-        android:textColor="@color/whiteBtn"
+        android:textColor="@android:color/background_light"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
