--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,38 +10,26 @@
 
 
     <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="66dp"
-        android:background="@color/colorPrimaryDark"
-        android:gravity="top"
-        android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/colorPrimaryDark">
 
         <ImageButton
-            android:id="@+id/imageButton_mainActivty_accountButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:onClick="accountBtnClick"
-            android:background="@android:color/transparent"
-            android:backgroundTint="@android:color/holo_red_dark"
-            android:src="@drawable/baseline_account_box_white_18"
-
-            tools:ignore="ContentDescription" />
-
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/baseline_account_box_white_18"/>
 
         <TextView
-            android:id="@+id/textView_mainactivity_appnameText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="15dp"
-            android:fontFamily="@font/orbitron"
-            android:text="@string/app_name"
-            android:textColor="@android:color/background_light"
-            android:textSize="30sp" />
-
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="16dp"
+                android:text="@string/app_name"
+                android:textColor="@android:color/white"
+                android:textSize="30sp"
+                android:fontFamily="@font/orbitron"/>
     </LinearLayout>
 
     <android.support.design.widget.TabLayout
